--- a/app/src/main/res/layout/event_comment_item.xml
+++ b/app/src/main/res/layout/event_comment_item.xml
@@ -18,42 +18,41 @@
         app:srcCompat="@drawable/avatar" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="45dp"
-        android:orientation="vertical"
+        android:layout_marginStart="18dp"
         android:background="@drawable/comment_background"
+        android:orientation="vertical"
+        android:padding="8sp"
         app:layout_constraintBottom_toBottomOf="@+id/img_player_photo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.8"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/img_player_photo"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        android:padding="8sp"
-        >
+        app:layout_constraintVertical_bias="1.0">
 
         <TextView
             android:id="@+id/event_comment_item_date"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="12dp"
             android:text="Date"
             android:textAppearance="@style/TextAppearance.Material3.BodySmall"
             android:textSize="10sp" />
+
         <TextView
             android:id="@+id/event_comment_item_name"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="12dp"
+            android:layout_marginBottom="5sp"
             android:text="Player Name"
             android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
-            android:textSize="15sp"
-            android:layout_marginBottom="5sp"
-            />
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/event_comment_item_comment"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="12dp"
             android:text="Player Name"
