--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="chat_back">#EDEBC9</color>
     <color name="light_green">#52B137</color>
     <color name="red">#FF0000</color>
+    <color name="opa">#f1f1f1</color>
     <color name="transparent">#00000000</color>
 
 </resources>
