--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/chat_back"
+    android:background="@color/white"
     android:layout_height="match_parent"
     tools:context=".ui.chat.ChatActivity">
 
@@ -27,7 +27,30 @@
         android:layout_height="wrap_content"
         android:weightSum="80">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/new_comment_text_input_layout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="250dp"
+            android:hint="@string/type_a_message"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.099"
+            android:layout_height="56dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="80"
+            android:background="@drawable/rounded_edittext"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/comment_recycler_view"
+            app:layout_constraintVertical_bias="0.965">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/messageBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </com.google.android.material.textfield.TextInputLayout>
+       <!-- <EditText
             android:id="@+id/messageBox"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
@@ -40,7 +63,7 @@
 
             android:paddingStart="15dp"
             android:textColor="@color/black"
-            tools:ignore="RtlSymmetry" />
+            tools:ignore="RtlSymmetry" />-->
 
         <ImageView
             android:id="@+id/sentButton"
