--- a/app/src/main/res/layout/recieve.xml
+++ b/app/src/main/res/layout/recieve.xml
@@ -1,27 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:gravity="left"
+    android:layout_gravity="left"
+    >
 
     <RelativeLayout
+
         android:layout_width="wrap_content"
-        android:background="@drawable/receive_btn_background"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="45dp"
+        android:background="@drawable/message_background"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="5dp"
+        android:layout_marginStart="5dp"
         android:layout_marginRight="50dp"
         android:layout_marginTop="5dp"
-        android:layout_height="wrap_content">
+        android:padding="10sp"
+        >
 
         <TextView
             android:id="@+id/txt_rcv_msg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="This is recieved message"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:padding="10dp"/>
-
-
+            android:layout_marginEnd="12dp"
+               android:textColor="@color/black"
+            android:text="This is received messagsssssssssssssssssssssssssssssssssssssssssssssssssssse"
+            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
+            android:textSize="18sp" />
     </RelativeLayout>
 
 </RelativeLayout>
