--- a/app/src/main/res/layout/sent.xml
+++ b/app/src/main/res/layout/sent.xml
@@ -5,22 +5,25 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:background="@drawable/btn_background"
+        android:background="@drawable/sent_message_background"
         android:layout_alignParentRight="true"
         android:layout_marginRight="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="50dp"
+        android:layout_marginBottom="12sp"
+        android:padding="10sp"
         android:layout_height="wrap_content">
+
 
         <TextView
             android:id="@+id/txt_sent_msg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="This is sent message"
             android:textColor="@color/white"
+            android:layout_marginEnd="12dp"
+            android:text="This is received messagsssssssssssssssssssssssssssssssssssssssssssssssssssse"
+            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
             android:textSize="18sp" />
-
 
     </RelativeLayout>
 
