--- a/app/src/main/res/layout/user_layout.xml
+++ b/app/src/main/res/layout/user_layout.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     android:layout_marginBottom="2dp">
 
 
@@ -16,32 +17,21 @@
         android:id="@+id/txt_name"
         android:layout_width="wrap_content"
         android:layout_height="70dp"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="5sp"
         android:layout_toEndOf="@+id/avatar"
         android:gravity="center_vertical"
-        android:text="Abhay"
-        android:textColor="@color/back_main"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/unread"
-        android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:layout_marginStart="300dp"
-        android:layout_toEndOf="@+id/avatar"
-        android:gravity="center_vertical"
-        android:text="1"
-        android:textColor="@color/red"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:text="Friend"
+        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
+        android:textSize="15sp" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_below="@+id/txt_name"
-        android:layout_marginTop="5dp"
-        android:background="@color/chat_back" />
+        android:layout_marginTop="6dp"
+        android:background="@color/grey" />
 
 
 </RelativeLayout>
